--- a/index.html
+++ b/index.html
@@ -1,13 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Center and Resize iFrame</title>
+    <title>No Internet</title>
     <link rel="stylesheet" type="text/css" href="html.css">
 </head>
 <body>
     <div class="iframe-container">
         <iframe src="shark.html" class="centered-iframe"></iframe>
     </div>
-    <h1>No Internet</h1>
-</body>
+    <div class="textbox">
+        <h1>No Internet</h1>
+        <div>
+          <p>Try:</p>
+          <ul>
+            <li><a href="#">Entering the portal</a></li>
+            <li><a href="#">Entering the portal</a></li>
+            <li><a href="#">Entering the portal</a></li>
+          </ul>
+        </div>
+        <div class="error-code">ERR_INTERNET_DISCONNECTED</div>
+        
+ 
+          </body>
 </html>
