--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div>
           <p>Try:</p>
           <ul>
-            <li><a href="#">Entering the portal</a></li>
+            <li><a href="https://newart.city/show/fiber-optic-cable-death">Entering the portal</a></li>
             <li><a href="#">Entering the portal</a></li>
             <li><a href="#">Entering the portal</a></li>
           </ul>
