--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
           <p>Try:</p>
           <ul>
             <li><a href="https://newart.city/show/fiber-optic-cable-death">Entering the portal</a></li>
-            <li><a href="#">Entering the portal</a></li>
-            <li><a href="#">Entering the portal</a></li>
+            <li><a href="https://newart.city/show/netopia">Entering the portal</a></li>
+            <li><a href="https://newart.city/show/sharknado">Entering the portal</a></li>
           </ul>
         </div>
         <div class="error-code">ERR_INTERNET_DISCONNECTED</div>
